<resources>
    <string name="app_name">SQUEUE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Đăng nhập</string>
    <string name="todo">TODO</string>
    <string name="term">Bằng việc Đăng nhập, bạn đồng ý với các Điều khoản và chính sách của SQUEUE</string>
    <string name="decline">Bỏ qua</string>
    <string name="Ten_dn">Tên đăng nhập</string>
    <string name="Mat_khau">Mật khẩu</string>
    <string name="Quen_Mat_khau"><u>Quên Mật khẩu?</u></string>
    <string name="Cap_Lai_Mat_khau">Cấp lại Mật khẩu</string>
    <string name="Email">Email</string>
    <string name="Tiep_tuc">Tiếp tục</string>
    <string name="otp">Vui lòng nhập OTP xác nhận từ Email</string>
    <string name="confirm">Xác Nhận</string>
    <string name="b_n_ch_a_nh_n_c_m">Bạn chưa nhận được mã?</string>
    <string name="g_i_l_i_ngay">GỬI LẠI NGAY</string>
    <string name="queue">Quản lý hàng chờ</string>
    <string name="qr">Sinh QR Code</string>
    <string name="statistics">Xem thống kê</string>
    <string name="user">      Cá nhân</string>
    <string name="TinhThanh">Tỉnh/Thành Phố</string>
    <string name="QuanHuyen">Quận/Huyện</string>
    <string name="Phuong">Phường</string>
    <string name="Todanpho">Tổ dân phố</string>
    <string name="GenQR">Generate QR Code</string>
    <string name="SaveQR">Save QR Code</string>
    <string name="thongke">Thống kê</string>
    <string name="xemthongke">Xem thống kê</string>
    <string name="tiletiem">Tỉ lệ số mũi được tiêm (%):</string>
    <string name="dose0">Dose 0</string>
    <string name="dose1">Dose 1</string>
    <string name="dose2">Dose 2</string>
    <string name="dose3">Dose 3</string>
    <string name="userSetting">Cá nhân</string>
    <string name="editUser">Sửa</string>
    <string name="user_name">Tên hiển thị</string>
    <string name="user_address">Địa chỉ</string>
    <string name="user_dob">Ngày sinh</string>
    <string name="user_phoneNum">Số thuê bao</string>
    <string name="user_app">Ứng dụng</string>
    <string name="user_info">Thông tin cá nhân</string>
    <string name="noti_register">Đăng ký nhận thông báo</string>
    <string name="setting_appVersion">Phiên bản</string>
    <string name="logout">Đăng xuất</string>
    <string name="changePassword">Đổi mật khẩu</string>
    <string name="email">Email</string>
    <string name="role">Chức vụ</string>
    <string name="currentPassword">Mật khẩu hiện tại</string>
    <string name="oldPassword">Mật khẩu cũ</string>
    <string name="newPassword">Mật khẩu mới</string>
    <string name="confirmNewPassword">Xác nhận mật khẩu</string>
    <string name="createQueue">Tạo hàng đợi</string>
    <string name="seeQueue">Xem hàng chờ</string>
    <string name="vaccineType">Loại Vaccine</string>
    <string name="startDate">Ngày bắt đầu</string>
    <string name="startTime">Giờ bắt đầu</string>
    <string name="endDate">Ngày kết thúc</string>
    <string name="endTime">Giờ kết thúc</string>
    <string name="listCustomer">Hàng chờ</string>
    <string name="btNext">Served</string>
    <string name="btBack">Backward</string>
    <string name="btRear">Forward</string>


</resources>