<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_200"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    tools:context=".login.Login">

    <TextView
        android:id="@+id/squeue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="50sp" />


    <EditText
        android:id="@+id/etusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/Ten_dn"
        android:inputType="textPersonName"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:hint="@string/Mat_khau"
        android:inputType="textPassword"
        android:layout_marginBottom="30dp"
        android:minHeight="48dp" />


    <TextView
        android:id="@+id/tvforgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:text="@string/Quen_Mat_khau" />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:text="@string/term"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textColor="@color/blue" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/google_sign_in_button"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:background="@drawable/background_button"-->
<!--        android:text="Google"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="25sp" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp" />



</LinearLayout>