<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".login.ChangePassword">

    <TextView
        android:id="@+id/tvchangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/changePassword"
        android:textColor="@color/blue"
        android:textSize="50sp" />


    <EditText
        android:id="@+id/etcurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/currentPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etnewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/etconfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/confirmNewPassword"
        android:inputType="textPassword"
        android:minHeight="48dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btChangePassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_button"
        android:text="@string/changePassword"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp" />

</LinearLayout>